--- a/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/values/strings.xml
+++ b/Desktop/ProyectosAndroid/Prueba1/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="UserRegister">Registrar nuevo usuario</string>
     <string name="userArea">Área de usuario</string>
     <string name="passwordConfirm">Confirmar contraseña</string>
-
+    <string name="drawer_open">Open </string>
+    <string name="drawer_close">Close </string>
 </resources>
